<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- homescreen strings -->

	<string name="app_name">Bone Apple Teeth 2</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="selamat_datang__indira__string">Selamat Datang,Indira!</string>
	<string name="f_o_o_d_n_e_w_s_string">F O O D  N E W S</string>
	<string name="berita_harian_anda_tentang_makanan_string">Berita harian Anda tentang makanan</string>
	<string name="pertajam_kemampuan_otak_dengan_konsumsi_5_makanan_ini_setiap_hari_string">Pertajam Kemampuan Otak dengan Konsumsi 5 Makanan Ini Setiap Hari</string>
	<string name="_5_makanan_sehat_yang_timbulkan_efek_samping_jika_dikonsumsi_berlebihan_string">5 Makanan Sehat yang Timbulkan Efek Samping Jika Dikonsumsi Berlebihan</string>
	<string name="trik_agar_tidak_kantuk_usai_makan_siang_string">Trik Agar Tidak Kantuk Usai Makan Siang</string>
	<string name="trik_agar_tidak_kantuk_usai_makan_siang_ek1_string">Trik Agar Tidak Kantuk Usai Makan Siang</string>
	<string name="home_ek1_string">Home</string>
	<string name="indira_hafiz_alfarrel_string">Indira Hafiz Alfarrel</string>
	<string name="cilandak__jakarta_selatan_string">Cilandak, Jakarta Selatan</string>
	<string name="__indiramasak_string">@indiramasak</string>
	<string name="__indiramasak_ek1_string">@indiramasak</string>
	<string name="resep_terfavorit_string">Resep Terfavorit</string>
	<string name="indira_hafiz_student_umn_ac_id_string">indira.hafiz@student.umn.ac.id</string>
	<string name="email___string">Email :</string>
	<string name="nasi_goreng_string">Nasi Goreng</string>
	<string name="makanan_favorit_dari_kecil___string">Makanan Favorit dari Kecil :</string>
	<string name="_85_string">85</string>
	<string name="profile_string">Profile</string>
	<string name="jelajahi_ratusan_resep_pintar__string">Jelajahi RatusanResep Pintar.</string>
	<string name="kami_memiliki_ratusan_resep_pintar_dari_berbagai_belahan_dunia__string">Kami memiliki ratusan resep pintar dari berbagai belahan dunia.</string>
	<string name="lewati_string">Lewati</string>
	<string name="hai__selamat_datang__string">Hai, Selamat Datang!</string>
	<string name="indira_hafiz_student_umn_ac_id_ek1_string">indira.hafiz@student.umn.ac.id</string>
	<string name="_________________________string"></string>
	<string name="lupa_password__string">Lupa Password?</string>
	<string name="selanjutnya_string">Selanjutnya</string>
	<string name="_belum_punya_akun__sign_up_string">Belum punya akun? Sign Up</string>
	<string name="facebook_string">Facebook</string>
	<string name="google_string">Google</string>
	<string name="atau_login_dengan_string">Atau Login Dengan</string>
	<string name="membuat_akun_string">Membuat Akun</string>
	<string name="indira_hafiz_alfarrel_ek1_string">Indira Hafiz Alfarrel</string>
	<string name="indira_hafiz_student_umn_ac_id_ek2_string">indira.hafiz@student.umn.ac.id</string>
	<string name="_________________________ek1_string"></string>
	<string name="by_creating_an_account_you_accept_the_terms___condition_of_the_company_string">By Creating an account you accept the Terms &amp; Condition of the Company</string>
	<string name="register_string">Register</string>
	<string name="facebook_ek1_string">Facebook</string>
	<string name="google_ek1_string">Google</string>
	<string name="atau_register_dengan_string">Atau Register Dengan</string>
	<string name="_sudah_punya_akun__log_in_string">Sudah punya akun? Log In</string>
	<string name="simpan_resep_terlezatmu__string">Simpan ResepTerlezatmu.</string>
	<string name="simpan_resep_favoritmu_di_sini_string">Simpan resep favoritmu di sini</string>
	<string name="lewati_ek1_string">Lewati</string>
	<string name="resep_pintar_mudah_untukmu__string">Resep PintarMudah Untukmu.</string>
	<string name="ratusan_resep_pintar_untuk_koki_pemula_string">Ratusan resep pintar untuk kokipemula</string>
	<string name="lewati_ek2_string">Lewati</string>
	<string name="bone_appl__teeth_string">Bone Appl Teeth</string>
	<string name="read__cook__repeat_string">Read. Cook. Repeat</string>
	<string name="r_e_g_i_s_t_e_r_string">R E G I S T E R</string>
	<string name="l_o_g_i_n_string">L O G I N</string>
	<string name="cari_resep_string">Cari Resep</string>
	<string name="lamb_chop_string">Lamb Chop</string>
	<string name="_120_menit_string">120 Menit</string>
	<string name="beef_lasagna_string">Beef Lasagna</string>
	<string name="_45_menit_string">45 Menit</string>
	<string name="nasi_goreng_ek1_string">Nasi Goreng</string>
	<string name="_10_menit_string">10 Menit</string>
	<string name="lamb_chop_ek1_string">Lamb Chop</string>
	<string name="_120_menit_ek1_string">120 Menit</string>
	<string name="beef_lasagna_ek1_string">Beef Lasagna</string>
	<string name="_45_menit_ek1_string">45 Menit</string>
	<string name="mapo_tofu_string">Mapo Tofu</string>
	<string name="_20_menit_string">20 Menit</string>
	<string name="apa_yang_ingin_anda_masak_hari_ini__string">Apa yang ingin Andamasak hari ini?</string>
	<string name="pencarian_populer_string">Pencarian Populer</string>
	<string name="discover_ek1_string">Discover</string>
	<string name="cari_resep_favorit_string">Cari Resep Favorit</string>
	<string name="lamb_chop_ek2_string">Lamb Chop</string>
	<string name="_120_menit_ek2_string">120 Menit</string>
	<string name="beef_lasagna_ek2_string">Beef Lasagna</string>
	<string name="_45_menit_ek2_string">45 Menit</string>
	<string name="nasi_goreng_ek2_string">Nasi Goreng</string>
	<string name="_10_menit_ek1_string">10 Menit</string>
	<string name="lamb_chop_ek3_string">Lamb Chop</string>
	<string name="_120_menit_ek3_string">120 Menit</string>
	<string name="beef_lasagna_ek3_string">Beef Lasagna</string>
	<string name="_45_menit_ek3_string">45 Menit</string>
	<string name="mapo_tofu_ek1_string">Mapo Tofu</string>
	<string name="_20_menit_ek1_string">20 Menit</string>
	<string name="resep_favorit_string">Resep Favorit  </string>
	<string name="inilah_resep_favorit_kamu___string">Inilah resep favorit kamu :</string>
	<string name="favorit_string">Favorit</string>
	<string name="resep_rumahan_indonesia_string">Resep Rumahan Indonesia</string>
	<string name="nasi_goreng_ek3_string">Nasi Goreng</string>
	<string name="bahan_string">Bahan</string>
	<string name="cara_membuat_string">Cara Membuat</string>
	<string name="_1_siung_bawang_putih__iris_halus_string">1 siung bawang putih, iris halus</string>
	<string name="_1_sdm_royco_kaldu_ayam_string">1 sdm royco kaldu ayam</string>
	<string name="_2_sdm_minyak__untuk_menumis_string">2 sdm minyak, untuk menumis</string>
	<string name="_3_butir_bawang_merah__iris_halus_string">3 butir bawang merah, iris halus</string>
	<string name="_2_sdm_bango_kecap_manis_string">2 sdm bango kecap manis</string>
	<string name="_1_batang_daun_bawang_string">1 batang daun bawang</string>
	<string name="_600_gram_nasi_putih_string">600 gram Nasi Putih</string>
	<string name="_1_buah_telur_string">1 buah telur</string>
	<string name="_600_gram_nasi_putih_ek1_string">600 gram Nasi Putih</string>
	<string name="_1_buah_telur_ek1_string">1 buah telur</string>
	<string name="panaskan_minyak__tumis_bawang_putih__bawang_merah_hingga_harum__string">Panaskan minyak, tumis bawang putih, bawang merah       hingga harum. </string>
	<string name="_2__masukkan_wortel_dan_cabai__aduk_hingga_tercampur_rata__masak_hingga_wortel_mulai_layu__string">  2. Masukkan wortel dan cabai, aduk hingga tercampur       rata. Masak hingga wortel mulai layu.  </string>
	<string name="_3__tambahkan_nasi__royco_kaldu_ayam__dan_bango_kecap_manis__aduk_rata__string">3. Tambahkan nasi, Royco Kaldu Ayam, dan Bango Kecap     Manis, aduk rata. </string>
	<string name="_4__tambahkan_daun_bawang__aduk_rata__angkat_dan_sajikan_telur_mata_sapi_string">4. Tambahkan daun bawang, aduk rata. Angkat dan     sajikan telur mata sapi</string>
	<string name="mudah_string">Mudah</string>
	<string name="_10_menit_ek2_string">10 Menit</string>
	<string name="_4_8_string">4.8</string>
	<string name="pertajam_kemampuan_otak_dengan_konsumsi_5_makanan_ini_setiap_hari_ek1_string">Pertajam Kemampuan Otak dengan Konsumsi 5 Makanan Ini Setiap Hari</string>
	<string name="_16_oktober_2021_string">16 Oktober 2021</string>
	<string name="_1__cokelat_hitam_cokelat_hitam_memiliki_kandungan_yang_banyak_antioksidan_dan_flavanol_kakao_yang_dapat_menjaga_kesehatan_sel_di_otak__menurut_naidoo__makanan_ini_juga_memiliki_kandungan_serat_untuk_menghindari_peradangan_otak_dan_mencegah_penurunan_kognitif__berdasarkan_penelitian_yang_dilakukan_pada_2020_terhadap_dampak_cokelat_hitam_dan_putih__ditemukan_bahwa_cokelat_hitam_memiliki_kinerja_yang_lebih_baik_setelah_2_jam_dikonsumsi_dibandingkan_cokelat_putih__string">1. Cokelat HitamCokelat hitam memiliki kandungan yang banyak antioksidan dan flavanol kakao yang dapat menjaga kesehatan sel di otak. Menurut naidoo, makanan ini juga memiliki kandungan serat untuk menghindari peradangan otak dan mencegah penurunan kognitif.Berdasarkan penelitian yang dilakukan pada 2020 terhadap dampak cokelat hitam dan putih, ditemukan bahwa cokelat hitam memiliki kinerja yang lebih baik setelah 2 jam dikonsumsi dibandingkan cokelat putih.</string>
	<string name="_2__buah_beri_buah_beri_memberikan_banyak_manfaat_karena_kandungannya_yang_memiliki_antioksidan__fitonutrien__serat__vitamin__dan_mineral__beragam_nutrisi_yang_dimiliki_dapat_mempertahankan_memori__sedangkan_kandungan_serat_memberi_makan_mikroba_di_usus_untuk_mengurangi_peradangan_otak___memilih_buah_beri_yang_bermacam_macam_adalah_buah_beri_merah__biru__dan_hitam___saran_naidoo__contohnya__stroberi_yang_kaya_akan_flavonoid_dan_bermanfaat_memperlambat_penurunan_kognitif__lalu__blueberry_dapat_mencegah_stres_oksidatif__sedangkan_blackberry_yang_menjadi_sumber_antioksidan_dapat_membantu_menyehatkan_sel_otak__string">2. Buah BeriBuah beri memberikan banyak manfaat karena kandungannya yang memiliki antioksidan, fitonutrien, serat, vitamin, dan mineral. Beragam nutrisi yang dimiliki dapat mempertahankan memori, sedangkan kandungan serat memberi makan mikroba di usus untuk mengurangi peradangan otak."Memilih buah beri yang bermacam-macam adalah buah beri merah, biru, dan hitam," saran Naidoo.Contohnya, stroberi yang kaya akan flavonoid dan bermanfaat memperlambat penurunan kognitif. Lalu, blueberry dapat mencegah stres oksidatif, sedangkan blackberryyang menjadi sumber antioksidandapat membantu menyehatkan sel otak.</string>
	<string name="f_o_o_d_n_e_w_s_1_string">F O O D  N E W S</string>
</resources>