<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		homescreen
	 *	@date 		1636943553636
	 *	@title 		Bone Apple Teeth 2
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/on_boarding_page_1" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_on_boarding_page_1_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__on_boarding_page_1_ek2"
					android:background="@drawable/_bg__on_boarding_page_1_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="823dp" />


				<RelativeLayout android:id="@+id/status_bar_ek2"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_5_ek2"
						android:background="@drawable/rectangle_5_ek2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="411dp"
						android:layout_height="47dp" />

					<ImageView android:id="@+id/no_color_1_ek2"
						android:src="@drawable/no_color_1_ek2"
						android:contentDescription="no_color_1_ek2"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="406.08dp"
						android:layout_height="47dp" />

				</RelativeLayout>

				<TextView android:id="@+id/jelajahi_ratusan_resep_pintar_"
					android:fontFamily="Arial"
					android:textStyle="bold"
					android:textSize="30sp"
					android:textColor="@color/jelajahi_ratusan_resep_pintar__color"
					android:layout_marginLeft="27dp"
					android:layout_marginTop="91dp"
					android:layout_width="272dp"
					android:layout_height="89dp"
					android:text="@string/jelajahi_ratusan_resep_pintar__string"
					 />

				<TextView android:id="@+id/kami_memiliki_ratusan_resep_pintar_dari_berbagai_belahan_dunia_"
					android:fontFamily="Arial"
					android:textSize="18sp"
					android:textColor="@color/_bg__homescreen_ek2_color"
					android:layout_marginLeft="27dp"
					android:layout_marginTop="196dp"
					android:layout_width="336dp"
					android:layout_height="64dp"
					android:text="@string/kami_memiliki_ratusan_resep_pintar_dari_berbagai_belahan_dunia__string"
					 />

				<View android:id="@+id/ellipse_3"
					android:background="@drawable/ellipse_3_shape"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="693dp"
					android:layout_width="13dp"
					android:layout_height="13dp" />

				<View android:id="@+id/_ellipse_4"
					android:background="@drawable/_ellipse_4_shape"
					 android:layout_marginStart="85dp"
					android:layout_marginTop="693dp"
					android:layout_width="13dp"
					android:layout_height="13dp" />

				<View android:id="@+id/_ellipse_5"
					android:background="@drawable/_ellipse_5_shape"
					 android:layout_marginStart="115dp"
					android:layout_marginTop="693dp"
					android:layout_width="13dp"
					android:layout_height="13dp" />

				<View android:id="@+id/_rectangle_15"
					android:background="@drawable/_rectangle_15_shape"
					 android:layout_marginStart="239dp"
					android:layout_marginTop="679dp"
					android:layout_width="118dp"
					android:layout_height="42dp" />

				<TextView android:id="@+id/lewati"
					android:fontFamily="Arial"
					android:textStyle="bold"
					android:textSize="18sp"
					android:textColor="@color/pertajam_kemampuan_otak_dengan_konsumsi_5_makanan_ini_setiap_hari_color"
					android:layout_marginLeft="270dp"
					android:layout_marginTop="689dp"
					android:layout_width="80dp"
					android:layout_height="34dp"
					android:text="@string/lewati_string"
					 />

				<ImageView android:id="@+id/on_board_1_1"
					android:src="@drawable/on_board_1_1"
					android:contentDescription="on_board_1_1"
					 android:layout_marginStart="38dp"
					android:layout_marginTop="259dp"
					android:layout_width="354dp"
					android:layout_height="371dp" />

			</RelativeLayout>






		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>